--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 JWT_SECRET=palabrasecreta
-JWT_EMAIL_SECRET=paranga-email
-G_PASSWORD=rhoqlqatrjtaiild
-G_USER=ventas.bamboodmx@gmail.com
+JWT_EMAIL_SECRET=proyectofinal
+G_PASSWORD=evkyspivnrpntpkd
+G_USER=biancaej77@gmail.com
 APP_URL=http://localhost:8000
+FRONT_URL=http://localhost:5173
+NODE_ENV=development
